Novo endpoint para pegar todos os produtos de um tipo especifico
